syntax = "proto3";

option go_package = "rpc";

package rpc;

message Message {
    int64 id = 1;
    int64 sendId = 2;
    int64 sessionId = 3;
    int64 time = 4;
    int64 requestId = 5;
    MsgStatus status = 6;
    MsgType type = 7;
    bytes content = 8;
    int64 sequenceNo = 9;
    int64 sendNo = 10;
    string remoteAddr = 11;
}

enum MsgType {
    MT_UNKNOWN = 0; // 未知
    MT_WORDS = 1; // 文本
    MT_EMOJI = 2; // 表情
    MT_VOICE = 3; // 语音消息
    MT_IMAGE = 4; // 图片
    MT_FILE = 5; // 文件
    MT_GEO = 6; // 地理位置
    MT_CUSTOM = 7; // 自定义
}

enum MsgStatus {
    MS_UNKNOWN = 0;
    MS_NORMAL = 1;
    MS_WITHDRAW = 2;
}

message Words {
    string text = 1; // 文本消息内容
}

message Emoji {
    int64 face_id = 1;
    string face_url = 2;
}

message Voice {
    string id = 1; // 语音包id
    int32 size = 2; // 语音包大小
    int32 duration = 3; // 语音时长
    string url = 4; // 语音文件URL
}

message Image {
    string id = 1; // 图片id
    int32 width = 2; // 图片宽度
    int32 height = 3; // 图片长度
    string url = 4; // 图片URL
    string thumbnail_url = 5; // 图片缩略图url
}

message File {
    int64 id = 12; // 文件id
    string name = 13; // 文件名
    int64 size = 14; // 文件大小
    string url = 15; // 文件url
}

message Geo {
    string desc = 1; // 描述
    double lat = 2; // 经度
    double lng = 3; // 纬度
}

message Custom {
    string content = 1;
}
